# pico-freertos

./: CMakeLists.txt  README.md
include/: FreeRTOSConfig.h
log/: MobaXterm_COM8USB-SERIALCH340COM8_20241205_233506.txt
picotool/: CMakeLists.txt
picotool/picotool-build/: CMakeCache.txt  Makefile  cmake_install.cmake  data_locs.cpp  install_manifest.txt  picotool
picotool/picotool-build/bintool/: Makefile  cmake_install.cmake
picotool/picotool-build/boot_bootrom_headers/: Makefile  cmake_install.cmake
picotool/picotool-build/boot_picobin_headers/: Makefile  cmake_install.cmake
picotool/picotool-build/boot_picoboot_headers/: Makefile  cmake_install.cmake
picotool/picotool-build/boot_uf2_headers/: Makefile  cmake_install.cmake
picotool/picotool-build/elf/: Makefile  cmake_install.cmake
picotool/picotool-build/elf2uf2/: Makefile  cmake_install.cmake
picotool/picotool-build/errors/: Makefile  cmake_install.cmake
picotool/picotool-build/lib/: Makefile  cmake_install.cmake
picotool/picotool-build/lib/mbedtls/: Makefile  cmake_install.cmake
picotool/picotool-build/lib/nlohmann_json/: Makefile  cmake_install.cmake
picotool/picotool-build/pico_binary_info/: Makefile  cmake_install.cmake
picotool/picotool-build/pico_platform/: Makefile  cmake_install.cmake
picotool/picotool-build/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
picotool/picotool-build/picoboot_connection/: Makefile  cmake_install.cmake
picotool/picotool-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: main.c
(+13 files in other folders)
